--- a/index.html
+++ b/index.html
@@ -474,6 +474,14 @@ style=" fill:#000000;"><defs><radialGradient cx="86" cy="35.86558" r="115.56967"
                 </div>
             </div>
         </div>
+
+        <!-- Info Links -->
+        <script type="text/javascript">
+            var infolinks_pid = 3302379;
+            var infolinks_wsid = 0;
+            </script>
+        <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
