--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                 </div>
             </div>
         </section>
+        <!-- Start of banner code -->
+<a href="https://shrinkme.io/ref/InD3v"><img src="https://shrinkme.io/banners/ref/728x90GIF.gif" title="Make short links and earn the biggest money" /></a>
+<!-- End of banner code -->
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
@@ -475,7 +478,7 @@ style=" fill:#000000;"><defs><radialGradient cx="86" cy="35.86558" r="115.56967"
                 </div>
             </div>
         </div>
-
+        
         <!-- Info Links -->
         <script type="text/javascript">
             var infolinks_pid = 3302379;
