--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
                 </div>
             </div>
         </section>
-        <!-- Start of banner code -->
-<a href="https://shrinkme.io/ref/InD3v"><img src="https://shrinkme.io/banners/ref/728x90GIF.gif" title="Make short links and earn the biggest money" /></a>
-<!-- End of banner code -->
+
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
@@ -479,6 +477,34 @@ style=" fill:#000000;"><defs><radialGradient cx="86" cy="35.86558" r="115.56967"
             </div>
         </div>
         
+        <script type="text/javascript">//<![CDATA[ 
+            (function() {
+                var configuration = {
+                "token": "e1a289767269614af2b8152c126aa838",
+                "excludeDomains": [
+                    ""
+                ],
+                "capping": {
+                    "limit": 5,
+                    "timeout": 24
+                },
+                "exitScript": {
+                    "enabled": true
+                },
+                "popUnder": {
+                    "enabled": true
+                }
+            };
+                var script = document.createElement('script');
+                script.async = true;
+                script.src = '//cdn.shorte.st/link-converter.min.js';
+                script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+                var entry = document.getElementsByTagName('script')[0];
+                entry.parentNode.insertBefore(script, entry);
+            })();
+            //]]>
+        </script>
+
         <!-- Info Links -->
         <script type="text/javascript">
             var infolinks_pid = 3302379;
